--- a/package.json
+++ b/package.json
@@ -1,32 +1,51 @@
 {
-  "name": "mws-restaurant-stage-1",
+  "name": "mws-restaurant-reviews",
   "version": "1.0.0",
-  "description": "\"coursework for Udacity nanodegree\"",
-  "main": "index.js",
+  "description": "final stage for the udacity mobile web development nanodegree",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp sync"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tstickles/mws-restaurant-stage-1.git"
+    "url": "git+https://github.com/tstickles/mws-restaurant-reviews.git"
   },
   "keywords": [
-    "Udacity",
+    "udacity",
     "nanodegree"
   ],
   "author": "Tanya Stickles",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tstickles/mws-restaurant-stage-1/issues"
+    "url": "https://github.com/tstickles/mws-restaurant-reviews/issues"
   },
-  "homepage": "https://github.com/tstickles/mws-restaurant-stage-1#readme",
+  "homepage": "https://github.com/tstickles/mws-restaurant-reviews#readme",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "devDependencies": {
+    "@babel/core": "^7.1.5",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/register": "^7.0.0",
+    "ansi-colors": "^3.1.0",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.0",
+    "browserify": "^16.2.3",
+    "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
-    "gulp-sass": "^4.0.1"
-  },
-  "dependencies": {
-    "babel": "^6.23.0",
-    "idb": "^2.1.3"
+    "gulp-newer": "^1.4.0",
+    "gulp-responsive": "^2.11.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "lodash": "^4.17.11",
+    "merge-stream": "^1.0.1",
+    "run-sequence": "^2.2.1",
+    "sharp": "^0.20.5",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   }
 }
