--- a/package.json
+++ b/package.json
@@ -21,9 +21,27 @@
   },
   "homepage": "https://github.com/tstickles/mws-restaurant-stage-1#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "ansi-colors": "^3.1.0",
+    "babel-core": "^6.26.3",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.0",
+    "browserify": "^16.2.3",
+    "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-newer": "^1.4.0",
+    "gulp-responsive": "^2.11.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "lodash": "^4.17.11",
+    "merge-stream": "^1.0.1",
+    "run-sequence": "^2.2.1",
+    "sharp": "^0.20.5",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   },
   "dependencies": {
     "babel": "^6.23.0",
