--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,20 @@
 {
-    "name": "",
-    "short_name": "",
+    "name": "MWS Udacity Restaurant Reviews",
+    "short_name": "Reviews",
     "start_url": "index.html",
+    "icons": [
+        {
+          "src": "/icons/icons-192.png",
+          "type": "image/png",
+          "sizes": "192x192"
+        },
+        {
+          "src": "/icons/icons-512.png",
+          "type": "image/png",
+          "sizes": "512x512"
+        }
+      ],
     "display": "fullscreen",
-    "backgrond_color": "#fdfdfd",
+    "background_color": "#FDFDFD",
     "theme_color": "orange"
 }
